k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: news-backend
  template:
    metadata:
      labels:
        app: news-backend
    spec:
      containers:
        - name: backend
          image: sumitranaware24/personalizednewsrecommenderapp-springboot-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: news-backend
spec:
  selector:
    app: news-backend
  ports:
    - port: 8080
      targetPort: 8080
