k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: news.local
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: news-backend
                port:
                  number: 8080
          - path: /ml/?(.*)
            pathType: Prefix
            backend:
              service:
                name: fastapi-ml
                port:
                  number: 8000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: react-frontend
                port:
                  number: 80
